# vuzic-mini-rs

./: Cargo.toml  diagram.json  wokwi.toml
src/: main.rs
